--- a/articles/cognitive-services/bing-local-business-search/index.yml
+++ b/articles/cognitive-services/bing-local-business-search/index.yml
@@ -1,16 +1,16 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: bff078b73834308742bbdaa9ba98e62ca067a7ff
-ms.sourcegitcommit: 6678e16c4b273acd3eaf45af310de77090137fa1
+ms.openlocfilehash: 23a160b708200025236bfabac98f845473b4ca1c
+ms.sourcegitcommit: ada7419db9d03de550fbadf2f2bb2670c95cdb21
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/01/2018
-ms.locfileid: "50748807"
+ms.lasthandoff: 11/02/2018
+ms.locfileid: "50961628"
 documentType: LandingData
 title: Dokumentation om API för sökning efter lokala företag i Bing
 titleSuffix: Azure Cognitive Services
 metadata:
   title: Dokumentation om API för sökning efter lokala företag i Bing
-  description: API:et för sökning efter lokala företag i Bing är en RESTful-tjänst som gör det möjligt för dina program att hitta information om lokala platser och företag utifrån sökkriterier.
+  description: API:et för sökning efter lokala företag i Bing är en RESTful-tjänst som gör det möjligt för dina program att hitta lokala företag utifrån sökkriterier.
   services: cognitive-services
   author: mikedodaro
   manager: rosh
@@ -21,7 +21,7 @@ metadata:
   ms.date: 08/02/2018
   ms.author: rosh, v-gedod
 abstract:
-  description: API:et för sökning efter lokala företag i Bing gör det möjligt för dina program att hitta kontakt- och platsinformation om lokala platser och företag utifrån sökkriterier.
+  description: API:et för sökning efter lokala företag i Bing gör det möjligt för dina program att hitta kontakt- och platsinformation om lokala företag utifrån sökkriterier.
 sections:
 - title: Snabbstarter
   items:
