--- a/articles/dns/TOC.yml
+++ b/articles/dns/TOC.yml
@@ -56,6 +56,8 @@ items:
   items:
   - name: Skapa privat DNS-zon och -post – Azure CLI
     href: private-dns-getstarted-cli.md
+  - name: Aliasposter för belastningsutjämnade webbappar
+    href: dns-alias-appservice.md
   - name: Hantera DNS-zoner
     items:
     - name: Azure Portal
@@ -142,9 +144,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=dns
-ms.openlocfilehash: 2cc0a1760f9f499b6f5323eea33cdf12141317bc
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: a6187952c1b40040e5ddf40ef8a52861fc77efad
+ms.sourcegitcommit: 1fc949dab883453ac960e02d882e613806fabe6f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46966732"
+ms.lasthandoff: 11/03/2018
+ms.locfileid: "50978935"
