--- a/articles/service-fabric-mesh/index.yml
+++ b/articles/service-fabric-mesh/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 14938e25cc41ea11baef94b6a9e01e070ffac654
-ms.sourcegitcommit: 51a1476c85ca518a6d8b4cc35aed7a76b33e130f
+ms.openlocfilehash: 029342b5db33a7c713e915ae72066f732b6f46f0
+ms.sourcegitcommit: 1fc949dab883453ac960e02d882e613806fabe6f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/25/2018
-ms.locfileid: "47158198"
+ms.lasthandoff: 11/03/2018
+ms.locfileid: "50979428"
 documentType: LandingData
 title: Dokumentation om Azure Service Fabric Mesh
 metadata:
@@ -20,7 +20,7 @@ metadata:
   ms.date: 07/26/2018
   ms.author: ryanwi
 abstract:
-  description: Azure Service Fabric Mesh är en helt hanterad tjänst som gör det möjligt för utvecklare att skapa och distribuera verksamhetskritiska program utan att behöva hantera någon infrastruktur.  Använd Service Fabric Mesh för att skapa och köra säkra, distribuerade mikrotjänstprogram som kan skalas på begäran. Lär dig att använda Service Fabric Mesh med hjälp av våra snabbstarter och självstudier.  Mer information finns i denna <a href="/azure/service-fabric-mesh/service-fabric-mesh-overview">översikt över Service Fabric Mesh</a>.
+  description: Azure Service Fabric Mesh är en helt hanterad tjänst som gör det möjligt för utvecklare att skapa och distribuera verksamhetskritiska program utan att behöva hantera någon infrastruktur.  Använd Service Fabric Mesh för att skapa och köra säkra, distribuerade mikrotjänstprogram som kan skalas på begäran. Lär dig att använda Service Fabric Mesh med hjälp av våra snabbstarter och självstudier.  Mer information finns i <a href="/azure/service-fabric-mesh/service-fabric-mesh-overview">översikten över Service Fabric Mesh</a> och <a href="/azure/service-fabric-mesh/service-fabric-mesh-faq">vanliga frågor och svar</a>.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
