--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -207,8 +207,13 @@ items:
         href: howto-app-gallery-listing.md
       - name: Publicera i Office 365-instrumentpanel för försäljning
         href: https://docs.microsoft.com/office/dev/store/use-the-seller-dashboard-to-submit-to-the-office-store
-    - name: Migrera från Azure Access Control Service
-      href: active-directory-acs-migration.md
+    - name: Azure Access Control Service
+      displayName: ACS
+      items:
+      - name: Migrera från Azure Access Control Service
+        href: active-directory-acs-migration.md
+      - name: Återaktivera inaktiverade Access Control Service-namnområden
+        href: howto-reactivate-disabled-acs-namespaces.md
     - name: Använd Azure AD Graph API:n
       href: active-directory-graph-api-quickstart.md
     - name: AD FS För utvecklare
@@ -428,9 +433,9 @@ items:
     href: developer-support-help-options.md
   - name: Hanterade identiteter för Azure-resurser
     href: https://docs.microsoft.com/azure/active-directory/managed-service-identity/overview
-ms.openlocfilehash: 8d37b5b977509b61d31f7ed29571762325188f33
-ms.sourcegitcommit: c2c279cb2cbc0bc268b38fbd900f1bac2fd0e88f
+ms.openlocfilehash: 00aa04556d555c5e29707287e2cb91db22f34ac7
+ms.sourcegitcommit: 00dd50f9528ff6a049a3c5f4abb2f691bf0b355a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/24/2018
-ms.locfileid: "49987831"
+ms.lasthandoff: 11/05/2018
+ms.locfileid: "51011637"
