--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -5,7 +5,7 @@ items:
   items:
   - name: Vad är Event Hubs?
     href: event-hubs-about.md
-  - name: Event Hubs för Apache Kafka (förhandsversion)
+  - name: Event Hubs för Apache Kafka
     href: event-hubs-for-kafka-ecosystem-overview.md
   - name: Event Hubs Capture
     href: event-hubs-capture-overview.md
@@ -69,8 +69,12 @@ items:
     items:
     - name: Spegla en asynkron Kafka-meddelandekö i en Apache Kafka-aktiverad händelsehubb
       href: event-hubs-kafka-mirror-maker-tutorial.md
+    - name: Ansluta Apache Spark till en Apache Kafka-aktiverad händelsehubb
+      href: event-hubs-kafka-spark-tutorial.md
     - name: Ansluta Apache Flink till en Apache Kafka-aktiverad händelsehubb
       href: event-hubs-kafka-flink-tutorial.md
+    - name: Integrera Apache Kafka Connect med en Kafka-aktiverad händelsehubb (förhandsversion)
+      href: event-hubs-kafka-connect-tutorial.md
     - name: Ansluta Akka Streams till en Apache Kafka-aktiverad händelsehubb
       href: event-hubs-kafka-akka-streams-tutorial.md
 - name: Exempel
@@ -122,6 +126,8 @@ items:
       href: event-hubs-metrics-azure-monitor.md
     - name: Event Hubs-hanteringsbibliotek
       href: event-hubs-management-libraries.md
+  - name: Hämta Event Hubs-anslutningssträng
+    href: event-hubs-get-connection-string.md
   - name: Felsöka
     items:
     - name: Undantag
@@ -134,6 +140,8 @@ items:
     href: event-hubs-auto-inflate.md
   - name: Strömma Azure Diagnostics-data med Event Hubs
     href: event-hubs-streaming-azure-diags-data.md
+  - name: Utbyta händelser mellan program med olika protokoll
+    href: event-hubs-exchange-events-different-protocols.md
 - name: Referens
   items:
   - name: Java
@@ -176,9 +184,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-eventhub
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=event-hubs
-ms.openlocfilehash: f5e7bad27764428b80f523bc3c3c6c0445665783
-ms.sourcegitcommit: 1fc949dab883453ac960e02d882e613806fabe6f
+ms.openlocfilehash: 28260650a8859f76aa6d8bd6ff9333d57c65e55a
+ms.sourcegitcommit: ba4570d778187a975645a45920d1d631139ac36e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/03/2018
-ms.locfileid: "50977795"
+ms.lasthandoff: 11/08/2018
+ms.locfileid: "51281464"
