--- a/articles/machine-learning/studio/toc.yml
+++ b/articles/machine-learning/studio/toc.yml
@@ -4,12 +4,16 @@ items:
 - name: Översikt
   items:
   - name: Machine Learning Studio
+    displayName: overview
     href: what-is-ml-studio.md
   - name: ML Studio-funktioner
+    displayName: overview
     href: studio-overview-diagram.md
   - name: Grunderna i ML Studio (informationsgrafik)
+    displayName: algorithm, algorithms
     href: basics-infographic-with-algorithm-examples.md
   - name: Vanliga frågor och svar
+    displayName: FAQ
     href: faq.md
   - name: Nyheter
     href: whats-new.md
@@ -17,6 +21,7 @@ items:
 - name: Kom igång
   items:
   - name: Skapa ditt första experiment
+    displayName: quickstart
     href: create-experiment.md
   - name: Exempelgenomgång
     items:
@@ -31,8 +36,10 @@ items:
     - name: 4 – Träna och utvärdera
       href: walkthrough-4-train-and-evaluate-models.md
     - name: 5 – Distribuera webbtjänst
+      displayName: publish
       href: walkthrough-5-publish-web-service.md
     - name: 6 – Få åtkomst till webbtjänsten
+      displayName: consume
       href: walkthrough-6-access-web-service.md
   - name: Datavetenskap för nybörjare
     items:
@@ -63,6 +70,7 @@ items:
       - name: Distribuera med ARM
         href: deploy-with-resource-manager-template.md
       - name: Visa och ta bort Studio-kontodata
+        displayName: export
         href: export-delete-personal-data-dsr.md
   - name: Skaffa och förstå data
     items:
@@ -77,6 +85,7 @@ items:
       - name: Från ett experiment
         href: import-data-from-an-experiment.md
       - name: Använda lokal SQL
+        displayName: on-premises
         href: use-data-from-an-on-premises-sql-server.md
   - name: Utveckla modeller
     items:
@@ -87,6 +96,7 @@ items:
       - name: Hantera experimentupprepningar
         href: manage-experiment-iterations.md
       - name: Använda PowerShell för att skapa modeller
+        displayName: endpoint, endpoints
         href: create-models-and-endpoints-with-powershell.md
       - name: Välja algoritmer
         items:
@@ -103,6 +113,7 @@ items:
         - name: Utvärdera prestanda
           href: evaluate-model-performance.md
         - name: Optimera parametrar
+          displayName: optimization
           href: algorithm-parameters-optimize.md
         - name: Tolka resultaten
           href: interpret-model-results.md
@@ -117,20 +128,25 @@ items:
         - name: Köra Python-skript
           href: execute-python-scripts.md
   - name: Operationalisera modeller
+    displayName: deploy
     items:
     - name: Översikt
+      displayName: deploy, consume, web service
       href: deploy-consume-web-service-guide.md
     - name: Distribuera modeller
       items:
       - name: Distribuera en webbtjänst
+        displayName: publish
         href: publish-a-machine-learning-web-service.md
       - name: Hur det fungerar
         href: model-progression-experiment-to-web-service.md
       - name: Förbereda för distribution
         href: convert-training-experiment-to-scoring-experiment.md
       - name: Använda externa data
+        displayName: import, export
         href: web-services-that-use-import-export-modules.md
       - name: Distribuera i flera områden
+        displayName: multiple regions
         href: how-to-deploy-to-multiple-regions.md
       - name: Använda webbtjänstparametrar
         href: web-service-parameters.md
@@ -141,6 +157,7 @@ items:
       - name: Använda Web Services-portalen
         href: manage-new-webservice.md
       - name: Hantera med API:er
+        displayName: endpoint, endpoints
         href: manage-web-service-endpoints-using-api-management.md
       - name: Skapa slutpunkter
         href: create-endpoint.md
@@ -238,9 +255,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-machine-learning
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=machine-learning
-ms.openlocfilehash: b7c5cea35e8b1441bc8a08e8d8582141cd430868
-ms.sourcegitcommit: 7c4fd6fe267f79e760dc9aa8b432caa03d34615d
+ms.openlocfilehash: 77caf4b0144b8c7d7a7a48053d55864bfa9ae286
+ms.sourcegitcommit: 02ce0fc22a71796f08a9aa20c76e2fa40eb2f10a
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "47431533"
+ms.lasthandoff: 11/08/2018
+ms.locfileid: "51287599"
