--- a/articles/cognitive-services/video-indexer/toc.yml
+++ b/articles/cognitive-services/video-indexer/toc.yml
@@ -3,36 +3,36 @@ items:
 - name: Översikt
   items:
   - name: Vad är Video Indexer?
-    href: video-indexer-overview.md
+    href: ../../media-services/video-indexer/video-indexer-overview.md
   - name: Begrepp
-    href: video-indexer-concepts.md
+    href: ../../media-services/video-indexer/video-indexer-concepts.md
 - name: Snabbstarter
   items:
   - name: Kom igång
-    href: video-indexer-get-started.md
+    href: ../../media-services/video-indexer/video-indexer-get-started.md
   expanded: true
 - name: Guider
   items:
   - name: Migrera från v1 till v2
-    href: migrate-from-v1-to-v2.md
+    href: ../../media-services/video-indexer/migrate-from-v1-to-v2.md
   - name: Anslut till Azure
-    href: connect-to-azure.md
+    href: ../../media-services/video-indexer/connect-to-azure.md
   - name: Hantera konto som är anslutet till Azure
-    href: manage-account-connected-to-azure.md
+    href: ../../media-services/video-indexer/manage-account-connected-to-azure.md
   - name: Använda Video Indexer-API
-    href: video-indexer-use-apis.md
+    href: ../../media-services/video-indexer/video-indexer-use-apis.md
   - name: Använda API för att ladda upp och indexera videor
-    href: upload-index-videos.md
+    href: ../../media-services/video-indexer/upload-index-videos.md
   - name: Undersöka utdata för Video Indexer
-    href: video-indexer-output-json-v2.md
+    href: ../../media-services/video-indexer/video-indexer-output-json-v2.md
   - name: Hitta exakta ögonblick i videor
-    href: video-indexer-search.md
+    href: ../../media-services/video-indexer/video-indexer-search.md
   - name: Visa och redigera Video Indexer-insikter
-    href: video-indexer-view-edit.md
+    href: ../../media-services/video-indexer/video-indexer-view-edit.md
   - name: Skapa videoinsikter utifrån befintliga videor
-    href: video-indexer-create-new.md
+    href: ../../media-services/video-indexer/video-indexer-create-new.md
   - name: Bädda in widgetar i programmet
-    href: video-indexer-embed-widgets.md
+    href: ../../media-services/video-indexer/video-indexer-embed-widgets.md
 - name: Referens
   items:
   - name: Video Indexer-API
@@ -47,9 +47,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/microsoft-cognitive
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=ai-machine-learning
-ms.openlocfilehash: 893802d670b2fe5fe63caa3f55107ef178792a9c
-ms.sourcegitcommit: b5ac31eeb7c4f9be584bb0f7d55c5654b74404ff
+ms.openlocfilehash: 5283cc39c64c31d6b9014043bf37e066cef582a7
+ms.sourcegitcommit: beb4fa5b36e1529408829603f3844e433bea46fe
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/23/2018
-ms.locfileid: "42744246"
+ms.lasthandoff: 11/22/2018
+ms.locfileid: "52290764"
