--- a/articles/active-directory/privileged-identity-management/TOC.yml
+++ b/articles/active-directory/privileged-identity-management/TOC.yml
@@ -59,6 +59,8 @@ items:
     items:
     - name: Tilldela roller
       href: pim-resource-roles-assign-roles.md
+    - name: Bjuda in externa användare
+      href: pim-resource-roles-external-users.md
     - name: Godkänn förfrågningar
       href: pim-resource-roles-approval-workflow.md
     - name: Utöka eller förnya roller
@@ -92,9 +94,9 @@ items:
       - name: Slutför en åtkomstgranskning
         href: pim-resource-roles-complete-access-review.md
   expanded: true
-ms.openlocfilehash: b0f1103eca9ac1ac22c4d971b2b51b5c2012dccb
-ms.sourcegitcommit: 345b96d564256bcd3115910e93220c4e4cf827b3
+ms.openlocfilehash: 235d0444428072aa10558989904b92222e6fdbd1
+ms.sourcegitcommit: 333d4246f62b858e376dcdcda789ecbc0c93cd92
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/28/2018
-ms.locfileid: "52497308"
+ms.lasthandoff: 12/01/2018
+ms.locfileid: "52723371"
