--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -25,12 +25,14 @@ items:
       href: iot-accelerators-remote-monitoring-monitor.md
     - name: Identifiera enhetsproblem
       href: iot-accelerators-remote-monitoring-automate.md
-    - name: Konfigurera och hantera enheter
+    - name: Konfigurera enheter
       href: iot-accelerators-remote-monitoring-manage.md
     - name: Utföra en rotorsaksanalys på en avisering
       href: iot-accelerators-remote-monitoring-root-cause-analysis.md
     - name: Använda aviseringar och åtgärda enhetsproblem
       href: iot-accelerators-remote-monitoring-maintain.md
+    - name: Massuppdatera enhetskonfigurationer
+      href: iot-accelerators-remote-monitoring-bulk-configuration-update.md
     - name: Identifiera avvikelser vid gränsen
       href: iot-accelerators-remote-monitoring-edge.md
   - name: Enhetssimulering
@@ -81,6 +83,8 @@ items:
       href: iot-accelerators-remote-monitoring-add-edge-device.md
     - name: Importera ett IoT Edge-paket
       href: iot-accelerators-remote-monitoring-import-edge-package.md
+    - name: Importera paket för automatisk enhetshantering
+      href: iot-accelerators-remote-monitoring-import-adm-package.md
     - name: Integrera SIM-data
       href: iot-accelerators-remote-monitoring-telefonica-sim.md
     - name: Skapa en simulerad enhet
@@ -225,9 +229,9 @@ items:
     href: iot-accelerators-faq-cf.md
   - name: Stack Overflow
     href: https://stackoverflow.com/questions/tagged/azure-iot-suite
-ms.openlocfilehash: bdd52d0023fbf43343cc5108216c6f11e35b89aa
-ms.sourcegitcommit: 8899e76afb51f0d507c4f786f28eb46ada060b8d
+ms.openlocfilehash: b36278d1e2a85cd7759d81b022fb1883b7ca2aa6
+ms.sourcegitcommit: cd0a1514bb5300d69c626ef9984049e9d62c7237
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/16/2018
-ms.locfileid: "51824854"
+ms.lasthandoff: 11/30/2018
+ms.locfileid: "52680947"
