--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -227,6 +227,10 @@ items:
       items:
       - name: Förstå konfiguration av regelbunden säkerhetskopiering
         href: service-fabric-backuprestoreservice-configure-periodic-backup.md
+      - name: Utlösa återställning av partition
+        href: service-fabric-backup-restore-service-trigger-restore.md
+      - name: Säkerhetskopiering av partition på begäran
+        href: service-fabric-backup-restore-service-ondemand-backup.md
   - name: Kluster
     items:
     - name: Översikt över kluster
@@ -459,6 +463,8 @@ items:
       href: service-fabric-backuprestoreservice-quickstart-azurecluster.md
     - name: Konfigurera regelbundna säkerhetskopieringar (fristående kluster)
       href: service-fabric-backuprestoreservice-quickstart-standalonecluster.md
+    - name: Säkerhetskopiering av partition på begäran
+      href: service-fabric-backuprestoreservice-ondemand-backup.md
     - name: Migrera gamla Java-program som stöder Maven
       href: service-fabric-migrate-old-javaapp-to-use-maven.md
   - name: Arbeta i IDE
@@ -663,10 +669,14 @@ items:
         href: service-fabric-diagnostics-event-analysis-oms.md
       - name: Fråga EventStore-API:er
         href: service-fabric-diagnostics-eventstore-query.md
-      - name: Anpassa WAD-agenten
+      - name: Diagnostik av Windows-kluster
         href: service-fabric-diagnostics-event-aggregation-wad.md
-      - name: Anpassa LAD-agenten
-        href: service-fabric-diagnostics-event-aggregation-lad.md
+      - name: Diagnostik av Linux-kluster
+        href: service-fabric-diagnostics-oms-syslog.md
+      - name: Konfigurera Log Analytics
+        href: service-fabric-diagnostics-oms-setup.md
+      - name: Övervaka med Log Analytics
+        href: service-fabric-diagnostics-event-analysis-oms.md
     - name: Övervaka infrastruktur
       items:
       - name: Samla in prestandaräknare med Log Analytics-agenten
@@ -782,9 +792,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=service-fabric
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric
-ms.openlocfilehash: 320399b277b7b6aa05b128994f68058455353e7b
-ms.sourcegitcommit: beb4fa5b36e1529408829603f3844e433bea46fe
+ms.openlocfilehash: 1b610207303b7a1b7ec283217830fe89f07f43e9
+ms.sourcegitcommit: 333d4246f62b858e376dcdcda789ecbc0c93cd92
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/22/2018
-ms.locfileid: "52291512"
+ms.lasthandoff: 12/01/2018
+ms.locfileid: "52721756"
