--- a/articles/azure-resource-manager/toc.yml
+++ b/articles/azure-resource-manager/toc.yml
@@ -32,6 +32,8 @@ items:
     href: resource-manager-tutorial-deploy-vm-extensions.md
   - name: Distribuera SQL-tillägg
     href: resource-manager-tutorial-deploy-sql-extensions-bacpac.md
+  - name: Skydda artefakter
+    href: resource-manager-tutorial-secure-artifacts.md
   - name: Använda säkra distributionsmetoder
     href: deployment-manager-tutorial.md
 - name: Exempel
@@ -235,9 +237,9 @@ items:
     href: resource-manager-personal-data.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=azure-resource-manager
-ms.openlocfilehash: 472d31764efb3793508502ce8585bac3f9a948cc
-ms.sourcegitcommit: a08d1236f737915817815da299984461cc2ab07e
+ms.openlocfilehash: 5888edddf19001e985badfda4d430e77891cc3e6
+ms.sourcegitcommit: 5d837a7557363424e0183d5f04dcb23a8ff966bb
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/26/2018
-ms.locfileid: "52315332"
+ms.lasthandoff: 12/06/2018
+ms.locfileid: "52960234"
