--- a/articles/data-explorer/toc.yml
+++ b/articles/data-explorer/toc.yml
@@ -37,7 +37,7 @@ items:
       href: power-bi-sql-query.md
 - name: Självstudier
   items:
-  - name: Visualisera data – Power BI
+  - name: Visualisera data i Power BI
     href: visualize-power-bi.md
 - name: Begrepp
   items:
@@ -55,6 +55,8 @@ items:
     href: write-queries.md
   - name: Mata in exempeldata
     href: ingest-sample-data.md
+  - name: Visualisera data i Grafana
+    href: grafana.md
   - name: Ta bort data
     href: delete-data.md
   - name: Hantera databasbehörigheter
@@ -103,9 +105,9 @@ items:
     href: http://aka.ms/adecostestimator
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=data-explorer
-ms.openlocfilehash: 904a61591935a7a1b648b1582e4f1ccdc155cf35
-ms.sourcegitcommit: c61c98a7a79d7bb9d301c654d0f01ac6f9bb9ce5
+ms.openlocfilehash: 31b588167d4a136f54df248225fd718128a7421c
+ms.sourcegitcommit: 5d837a7557363424e0183d5f04dcb23a8ff966bb
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/27/2018
-ms.locfileid: "52425062"
+ms.lasthandoff: 12/06/2018
+ms.locfileid: "52958226"
