--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -30,16 +30,16 @@ items:
     href: tutorial-create-vmss.md
   - name: 7 – Belastningsutjämna virtuella datorer
     href: tutorial-load-balancer.md
-  - name: 8 – Hantera nätverk
+  - name: 8 – Nätverk för virtuella datorer
     href: tutorial-virtual-network.md
   - name: 9 – Säkerhetskopiera virtuella datorer
     href: tutorial-backup-vms.md
-  - name: 10 – Styra virtuella datorer
+  - name: 10 – Hantera virtuella datorer
     displayName: scope policy RBAC lock tag
     href: tutorial-govern-resources.md
   - name: 11 – Övervaka och uppdatera virtuella datorer
     href: tutorial-monitoring.md
-  - name: 12 – Hantera VM-säkerhet
+  - name: 12 – Security Center för virtuella datorer
     href: tutorial-azure-security.md
   - name: 13 – Installera en SQL\IIS\.NET-stack
     href: tutorial-iis-sql.md
@@ -409,8 +409,6 @@ items:
         href: migration-classic-resource-manager-community-tools.md
       - name: VANLIGA FRÅGOR OCH SVAR
         href: migration-classic-resource-manager-faq.md
-- name: Felsöka
-  href: ../troubleshooting/index.md
 - name: Referens
   items:
   - name: Azure CLI
@@ -449,9 +447,11 @@ items:
     href: https://azure.microsoft.com/documentation/videos/index/?services=virtual-machines
   - name: VANLIGA FRÅGOR OCH SVAR
     href: faq.md
-ms.openlocfilehash: 45e2dba5a95660e123754c1770d68de5493a1c10
-ms.sourcegitcommit: 1fc949dab883453ac960e02d882e613806fabe6f
+- name: Felsöka
+  href: ../troubleshooting/index.md
+ms.openlocfilehash: bb8bf3fdd1b49987013fbb6b2f508019cedc811e
+ms.sourcegitcommit: 5d837a7557363424e0183d5f04dcb23a8ff966bb
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 11/03/2018
-ms.locfileid: "50979445"
+ms.lasthandoff: 12/06/2018
+ms.locfileid: "52958260"
